# frys

./: .biome.json  .env.staging  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmessage.txt  .lighthouserc.json  .markdownlint.json  .prettierrc  .secrets.json  AI_FRONTIER_INSIGHTS_FOR_FRYS.md  AOS_TECHNOLOGY_STACK_BLUEPRINT.md  AOS_WORKFLOW_ARCHITECTURE.md  AOS_WORKFLOW_IMPLEMENTATION_DETAILS.md  AOS_WORKFLOW_LANDING_GUIDE.md  AOS_WORKFLOW_TECHNICAL_ARCHITECTURE_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_LEARNING_GUIDE.md  BUGFIX_GUIDE.md  CITATION.cff  DEPLOYMENT_MONITORING_GUIDE.md  DETAILED_TODO_LIST.md  Dockerfile  FRYS_CREATION_RING_CONSTITUTION.md  FRYS_WORLD_MODEL_FRAMEWORK.md  GETTING_STARTED.md  GITHUB_BEST_PRACTICES_ASSESSMENT.md  HYBRID_ARCHITECTURE_DESIGN.md  INFRASTRUCTURE_REFACTOR_PLAN.md  KNOWLEDGE_BASE.md  LICENSE  MODULARIZATION_REFACTORING_REPORT.md  MODULARIZATION_SUMMARY.md  OPEN_SOURCE_INTEGRATION.md  PHASE_6_PRODUCTION_DEPLOYMENT.md  PROJECT_COMPLETED.md  PROJECT_DECOUPLING_ANALYSIS.md  PROJECT_MODULARIZATION_PLAN.md  (+46 more)
.github/: CODEOWNERS  FUNDING.yml  README.md  SECURITY.md  branch-protection-rules.md  branch-protection.json  codeql-config.yml  codeql.yml  dependabot.yml  dependency-review-config.yml  pull_request_template.md  settings.yml
backup-1762785383062/: index.js
cg/: ARCHITECTURE_IMPLEMENTATION.md  ARCHITECTURE_REDESIGN.md  FRYS_VCP_INSPIRED_ARCHITECTURE.md  IMPROVEMENT_ANALYSIS_REPORT.md  ULTRA_PERFORMANCE_ARCHITECTURE.md
config/: env-example.txt  lightweight.config.js  plugins.json
demos/: app.js  demo-lightweight-integration.js  demo-open-source-integration.js  index.html  simple-test.js  styles.css  test-new-architecture.js  test-simple.js
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FIX_PLAN.md  GETTING_STARTED.md  MODERN_FIX_TOOLS.md  PROJECT_COMPLETED.md  QUICK_FIX_GUIDE.md  README.md  SECRETS_MANAGEMENT.md  SECURITY.md  STATUS.md  STYLE_GUIDE.md  TESTING_IMPROVEMENTS.md  api-consistency-standard.md  api-documentation.md  architecture-refactor-plan.md  authentication-authorization.md  auto-scaling-strategy.md  caching-strategy.md  ci-cd-optimization.md  cicd-completion-report.md  code-review-checklist.md  comprehensive-planning-summary.md  comprehensive-testing-strategy.md  container-health-checks.md  database-optimization.md  deployment-guide.md  distributed-tracing-system.md  dynamic-config-guide.md  environment-setup.md  environment-variables.md  exception-handling-flow.md  harsh-reality-analysis.md  improvement-summary.md  industrial-testing-final-report.md  industrial-testing-issues-analysis.md  industrial-testing-status-update.md  industrial-testing-summary.md  (+33 more)
examples/: README.md  ai-api-usage-examples.js  ai-provider-demo.html  ai-provider-integration.js  ai-services-demo.js  api-basics.js  auto-scaling-integration.js  dynamic-config-examples.js  modular-system.js  plugin-communication-examples.js  vcp-system-demo.js  (+2 more)
modules/frys-agent-system/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  README_MULTIMODAL.md
modules/frys-agent-system/src/: core.rs  error.rs  lib.rs  multimodal.rs
modules/frys-ai-system/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  TODO.md
modules/frys-ai-system/src/: config.rs  core.rs  error.rs  integration.rs  intelligence.rs  lib.rs  vision.rs
modules/frys-cache/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md
modules/frys-cache/src/: backends.rs  consistency.rs  core.rs  error.rs  lib.rs  main.rs  policies.rs  preloader.rs
modules/frys-config/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  TODO.md
modules/frys-config/src/: core.rs  error.rs  hot_reload.rs  lib.rs  main.rs  providers.rs  validation.rs
modules/frys-config/src/distributed/: consensus.rs  mod.rs  registry.rs  sync.rs
modules/frys-eventbus/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  TODO.md
modules/frys-eventbus/benches/: eventbus_benchmark.rs
modules/frys-eventbus/examples/: advanced_usage.rs  basic_usage.rs
modules/frys-eventbus/src/: async.rs  config.rs  core.rs  error.rs  lib.rs  metrics.rs  pubsub.rs  queues.rs  routing.rs
modules/frys-eventbus/src/distributed/: cluster.rs  consensus.rs  discovery.rs  mod.rs  replication.rs  routing.rs
modules/frys-gateway/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md
modules/frys-gateway/src/: core.rs  error.rs  lib.rs  load_balancing.rs  main.rs  routing.rs
modules/frys-kernel/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  TODO.md
modules/frys-kernel/src/: config.rs  error.rs  kernel.rs  lib.rs  main.rs  memory.rs  network.rs  storage.rs  thread.rs  utils.rs
modules/frys-monitoring/: Cargo.toml  DEVELOPMENT_GUIDE.md
modules/frys-monitoring/src/: alerts.rs  config.rs  core.rs  lib.rs  metrics.rs
modules/frys-plugin-ai/: Cargo.toml
modules/frys-plugin-ai/src/: config.rs  core.rs  embeddings.rs  error.rs  inference.rs  lib.rs  metrics.rs  models.rs  nlp.rs  training.rs  vision.rs
modules/frys-plugin-network/: Cargo.toml
modules/frys-plugin-network/src/: config.rs  core.rs  error.rs  lib.rs  monitoring.rs
modules/frys-plugin-storage/: Cargo.toml
modules/frys-plugin-storage/src/: config.rs  core.rs  error.rs  lib.rs  metrics.rs
modules/frys-plugin-system/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md
modules/frys-plugin-system/src/: communication.rs  core.rs  error.rs  isolation.rs  lib.rs  loader.rs  main.rs  registry.rs  sandbox.rs
modules/frys-vector-search/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  README_ML_ANALYTICS.md  TODO.md
modules/frys-vector-search/src/: algorithms.rs  core.rs  distributed.rs  error.rs  indexing.rs  lib.rs  main.rs  ml_integration.rs  query.rs  realtime_stats.rs  storage.rs
modules/frys-websocket/: Cargo.toml  DEVELOPMENT_GUIDE.md  README.md
modules/frys-websocket/src/: core.rs  error.rs  lib.rs
modules/frys-workflow-engine/: Cargo.toml  README.md  README_CONCURRENT.md  TODO.md
modules/frys-workflow-engine/src/: analytics.rs  architecture.rs  concurrent.rs  core.rs  designer.rs  engine.rs  error.rs  events.rs  lib.rs  main.rs  versioning.rs
(+688 files in other folders)
