[package]
name = "frys-ai-system"
version = "0.1.0"
edition = "2021"
description = "Frys AI System - Multi-modal AI integration with Sira gateway"
license = "MIT"
authors = ["Frys Team"]
repository = "https://github.com/frys/frys-ai-system"
keywords = ["ai", "ml", "vision", "nlp", "multimodal", "sira", "gateway"]
categories = ["science", "api-bindings", "multimedia"]

# 零依赖核心 - 最小化外部依赖
[lib]
name = "frys_ai_system"
path = "src/lib.rs"

# 性能优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# 特性开关
[features]
default = ["std", "serde", "tokio"]
# 标准库支持
std = []
# 序列化支持 (可选)
serde = ["dep:serde", "serde_json"]
# 异步运行时支持
tokio = ["dep:tokio", "tokio-util"]
# HTTP客户端支持
http = ["reqwest"]
# WebSocket支持
websocket = ["tokio-tungstenite"]
# 图像处理支持
image = ["dep:image"]
# 音频处理支持
audio = ["dep:rodio"]
# 视频处理支持
video = ["ffmpeg-next"]
# 机器学习推理支持
inference = ["tch", "tract"]
# GPU加速支持
gpu = ["tch"]
# 缓存支持
cache = ["redis", "sled"]
# 监控支持
monitoring = ["prometheus"]
# 分布式支持
distributed = []
# 插件系统支持
plugins = []

# 核心依赖 (保持最小化)
[dependencies]
# 序列化支持
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# 异步运行时
tokio = { version = "1.28", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }
# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"], optional = true, default-features = false }
# WebSocket支持
tokio-tungstenite = { version = "0.18", optional = true }
# 图像处理
image = { version = "0.24", optional = true }
# 音频处理
rodio = { version = "0.17", optional = true }
# 视频处理
ffmpeg-next = { version = "6.0", optional = true }
# 机器学习推理
tch = { version = "0.10", optional = true }
tract = { version = "0.19", optional = true }
# 缓存
redis = { version = "0.23", optional = true }
sled = { version = "0.34", optional = true }
# 监控
prometheus = { version = "0.13", optional = true }
# 基础64编码
base64 = "0.21"
# 正则表达式
regex = "1.7"
# 随机数生成
rand = "0.8"
# 哈希函数
sha2 = "0.10"
# 时间处理
chrono = { version = "0.4", features = ["serde"], optional = true }
# UUID生成
uuid = { version = "1.3", features = ["v4"], optional = true }
# 错误处理
thiserror = "1.0"
# 异步特征
async-trait = "0.1"
# 异步流
futures = "0.3"

# 开发依赖
[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
tempfile = "3.0"
proptest = "1.0"
criterion = "0.5"
# 基准测试配置将在后续添加
