[package]
name = "frys-gateway"
version = "0.1.0"
edition = "2021"
description = "Frys Gateway - High-performance API gateway with advanced routing and load balancing"
license = "MIT"
authors = ["Frys Team"]
repository = "https://github.com/frys/frys-gateway"
keywords = ["gateway", "api", "proxy", "load-balancer", "routing"]
categories = ["network-programming", "web-programming", "concurrency"]

[lib]
name = "frys_gateway"
path = "src/lib.rs"

[features]
default = ["std", "http", "websocket", "tls", "metrics"]
std = []
http = ["dep:hyper", "dep:http", "dep:tower"]
websocket = ["dep:tokio-tungstenite", "dep:futures-util"]
tls = ["dep:rustls", "dep:tokio-rustls"]
metrics = ["dep:prometheus"]
rate_limiting = ["dep:governor"]
circuit_breaker = ["dep:circuit-breaker"]
authentication = ["dep:jsonwebtoken", "dep:bcrypt"]
authorization = ["dep:cadence"]
compression = ["dep:zstd", "dep:flate2"]
caching = ["dep:moka"]
distributed = ["dep:redis", "dep:tokio", "dep:flume"]
benchmarks = ["dep:criterion"]

[dependencies]
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.7"
rand = "0.8"
futures = "0.3"
tokio = { version = "1.28", features = ["full"], optional = true }
flume = { version = "0.11", optional = true }

# HTTP server
hyper = { version = "0.14", features = ["full"], optional = true }
http = { version = "0.2", optional = true }
tower = { version = "0.4", features = ["full"], optional = true }

# WebSocket support
tokio-tungstenite = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }

# TLS support
rustls = { version = "0.21", optional = true }
tokio-rustls = { version = "0.24", optional = true }

# Metrics
prometheus = { version = "0.13", optional = true }

# Rate limiting
governor = { version = "0.5", optional = true }

# Circuit breaker
circuit-breaker = { version = "0.1", optional = true }

# Authentication
jsonwebtoken = { version = "8.0", optional = true }
bcrypt = { version = "0.15", optional = true }

# Authorization
cadence = { version = "0.29", optional = true }

# Compression
zstd = { version = "0.12", optional = true }
flate2 = { version = "1.0", optional = true }

# Caching
moka = { version = "0.10", features = ["future"], optional = true }

# Distributed
redis = { version = "0.24", features = ["tokio-comp"], optional = true }

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
criterion = { version = "0.5", optional = true }
tempfile = "3.0"
