[package]
name = "frys-monitoring"
version = "0.1.0"
edition = "2021"
description = "Frys Monitoring System - Comprehensive monitoring, alerting, and observability for the Frys ecosystem"
license = "MIT"
authors = ["Frys Team"]
repository = "https://github.com/frys/frys-monitoring"
keywords = ["monitoring", "observability", "alerting", "metrics", "tracing"]
categories = ["development-tools", "api-bindings"]

[lib]
name = "frys_monitoring"
path = "src/lib.rs"

[features]
default = ["std", "http", "websocket", "storage", "alerting"]
std = []
http = ["dep:axum", "dep:reqwest", "dep:tower"]
websocket = ["dep:tokio-tungstenite", "dep:futures-util"]
storage = ["dep:rocksdb", "dep:serde_json"]
alerting = ["dep:lettre", "dep:handlebars"]
distributed = ["dep:redis", "dep:serde", "dep:bincode"]
ai_insights = ["dep:tch"]

[dependencies]
frys-kernel = { path = "../frys-kernel" }
frys-eventbus = { path = "../frys-eventbus" }
frys-config = { path = "../frys-config" }

# HTTP and WebSocket
axum = { version = "0.6", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tower = { version = "0.4", optional = true }
tokio-tungstenite = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }

# Storage
rocksdb = { version = "0.21", optional = true }
serde_json = { version = "1.0", optional = true }

# Alerting
lettre = { version = "0.10", features = ["tokio1-native-tls"], optional = true }
handlebars = { version = "4.3", optional = true }

# Distributed features
redis = { version = "0.24", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

# AI insights
tch = { version = "0.10", optional = true }

# Core dependencies
async-trait = "0.1"
tokio = { version = "1.28", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.7"
thiserror = "1.0"
anyhow = "1.0"
dashmap = "5.4"
crossbeam = "0.8"
parking_lot = "0.12"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "metrics_benchmark"
harness = false
