[package]
name = "frys-plugin-storage"
version = "0.1.0"
edition = "2021"
description = "Frys Storage Plugin - Advanced storage capabilities for the Frys ecosystem"
license = "MIT"
authors = ["Frys Team"]
repository = "https://github.com/frys/frys-plugin-storage"
keywords = ["storage", "plugin", "database", "file-system"]
categories = ["filesystem", "database", "plugins"]

[lib]
name = "frys_plugin_storage"
path = "src/lib.rs"

[features]
default = ["std", "file", "database", "cloud"]
std = []
file = ["dep:tokio", "dep:async-trait"]
database = ["dep:rusqlite", "dep:serde_json"]
cloud = ["dep:reqwest", "dep:serde"]
distributed = ["dep:redis"]
compression = ["dep:zstd"]
encryption = ["dep:ring"]

[dependencies]
frys-plugin-system = { path = "../frys-plugin-system" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.28", features = ["full"], optional = true }
rusqlite = { version = "0.29", optional = true, features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"], optional = true }
redis = { version = "0.24", optional = true }
zstd = { version = "0.12", optional = true }
ring = { version = "0.16", optional = true }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
