[package]
name = "frys-workflow-engine"
version = "0.1.0"
edition = "2021"
description = "Frys Workflow Engine - Distributed workflow execution with DAG support"
license = "MIT"
authors = ["Frys Team"]
repository = "https://github.com/frys/frys-workflow-engine"
keywords = ["workflow", "dag", "execution", "distributed", "orchestration"]
categories = ["workflow", "execution", "orchestration", "asynchronous"]

[lib]
name = "frys_workflow_engine"
path = "src/lib.rs"

[features]
default = ["std", "async", "persistence"]
std = []
async = ["dep:tokio"]
persistence = ["dep:serde", "dep:sled"]
dsl = ["dep:pest", "dep:pest_derive"]
monitoring = ["dep:prometheus"]
distributed = ["dep:redis"]

[dependencies]
tokio = { version = "1.28", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sled = { version = "0.34", optional = true }
pest = { version = "2.0", optional = true }
pest_derive = { version = "2.0", optional = true }
prometheus = { version = "0.13", optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
